// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:steps 1`] = `
<div>
  <ul
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Steps __PRISMUI_COMPONENT_CLASS_PREFIX__Steps--Placement- __PRISMUI_COMPONENT_CLASS_PREFIX__Steps-- __PRISMUI_COMPONENT_CLASS_PREFIX__Steps--horizontal __PRISMUI_COMPONENT_CLASS_PREFIX__StepsControl"
  >
    <li
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem is-process className"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-container"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerTail"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerIcon"
        >
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-icon"
          >
            <icon-mock
              class="icon icon-close"
              icon="close"
            />
          </span>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerWrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-title __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="First"
              >
                First
              </span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-subTitle __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="this is subTitle"
              >
                this is subTitle
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-description __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
              title="this is description"
            >
              <span
                class=""
              >
                this is description
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem is-wait"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-container"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerTail"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerIcon"
        >
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-icon"
          >
            2
          </span>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerWrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-title __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="Second"
              >
                Second
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-description __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
            >
              <span
                class=""
              />
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem is-wait"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-container"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerTail"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerIcon"
        >
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-icon"
          >
            3
          </span>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerWrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-title __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="Last"
              >
                Last
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-description __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
            >
              <span
                class=""
              />
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Renderer:steps 2`] = `
<div>
  <ul
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Steps __PRISMUI_COMPONENT_CLASS_PREFIX__Steps--Placement- __PRISMUI_COMPONENT_CLASS_PREFIX__Steps-- __PRISMUI_COMPONENT_CLASS_PREFIX__Steps--horizontal __PRISMUI_COMPONENT_CLASS_PREFIX__StepsControl"
  >
    <li
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem is-process className"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-container"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerTail"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerIcon"
        >
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-icon"
          >
            <icon-mock
              class="icon icon-close"
              icon="close"
            />
          </span>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerWrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-title __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="First"
              >
                First
              </span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-subTitle __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="this is subTitle"
              >
                this is subTitle
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-description __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
              title="this is description"
            >
              <span
                class=""
              >
                this is description
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem is-wait"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-container"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerTail"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerIcon"
        >
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-icon"
          >
            2
          </span>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerWrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-title __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="Second"
              >
                Second
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-description __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
            >
              <span
                class=""
              />
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem is-wait"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-container"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerTail"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerIcon"
        >
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-icon"
          >
            3
          </span>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerWrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-title __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="Last"
              >
                Last
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-description __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
            >
              <span
                class=""
              />
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Renderer:steps labelPlacement 1`] = `
<div>
  <ul
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Steps __PRISMUI_COMPONENT_CLASS_PREFIX__Steps--Placement-vertical __PRISMUI_COMPONENT_CLASS_PREFIX__Steps-- __PRISMUI_COMPONENT_CLASS_PREFIX__Steps--horizontal __PRISMUI_COMPONENT_CLASS_PREFIX__StepsControl className"
  >
    <li
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem is-process"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-container"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerTail"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerIcon"
        >
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-icon"
          >
            1
          </span>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerWrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-title __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="First"
              >
                First
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-description __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
            >
              <span
                class=""
              />
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem is-wait"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-container"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerTail"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerIcon"
        >
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-icon"
          >
            2
          </span>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerWrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-title __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="Second"
              >
                Second
              </span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-subTitle __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="this is subTitle"
              >
                this is subTitle
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-description __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
              title="this is description"
            >
              <span
                class=""
              >
                this is description
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem is-wait"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-container"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerTail"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerIcon"
        >
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-icon"
          >
            3
          </span>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerWrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-title __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="Third"
              >
                Third
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-description __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
            >
              <span
                class=""
              />
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Renderer:steps progressDot 1`] = `
<div>
  <ul
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Steps __PRISMUI_COMPONENT_CLASS_PREFIX__Steps--Placement-vertical __PRISMUI_COMPONENT_CLASS_PREFIX__Steps--ProgressDot __PRISMUI_COMPONENT_CLASS_PREFIX__Steps--horizontal __PRISMUI_COMPONENT_CLASS_PREFIX__StepsControl className"
  >
    <li
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem is-process __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ProgressDot"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-container"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerTail"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerProgressDot"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerWrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-title __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-vertical-ProgressDot"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="First"
              >
                First
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-description __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
            >
              <span
                class=""
              />
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem is-wait __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ProgressDot"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-container"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerTail"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerProgressDot"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerWrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-title __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-vertical-ProgressDot"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="Second"
              >
                Second
              </span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-subTitle __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="this is subTitle"
              >
                this is subTitle
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-description __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
              title="this is description"
            >
              <span
                class=""
              >
                this is description
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem is-wait __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ProgressDot"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-container"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerTail"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerProgressDot"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerWrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-title __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-vertical-ProgressDot"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="Third"
              >
                Third
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-description __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
            >
              <span
                class=""
              />
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Renderer:steps status 1`] = `
<div>
  <ul
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Steps __PRISMUI_COMPONENT_CLASS_PREFIX__Steps--Placement- __PRISMUI_COMPONENT_CLASS_PREFIX__Steps-- __PRISMUI_COMPONENT_CLASS_PREFIX__Steps--horizontal __PRISMUI_COMPONENT_CLASS_PREFIX__StepsControl className"
  >
    <li
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem is-finish"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-container"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerTail"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerIcon"
        >
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-icon"
          >
            1
          </span>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerWrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-title __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="First"
              >
                First
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-description __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
            >
              <span
                class=""
              />
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem is-error"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-container"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerTail"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerIcon"
        >
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-icon"
          >
            2
          </span>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerWrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-title __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="Second"
              >
                Second
              </span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-subTitle __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="this is subTitle"
              >
                this is subTitle
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-description __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
              title="this is description"
            >
              <span
                class=""
              >
                this is description
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem is-wait"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-container"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerTail"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerIcon"
        >
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-icon"
          >
            3
          </span>
        </div>
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerWrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-title __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="Third"
              >
                Third
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-description __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
            >
              <span
                class=""
              />
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Renderer:steps with vertical mode 1`] = `
<div>
  <ul
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Steps __PRISMUI_COMPONENT_CLASS_PREFIX__Steps--Placement-vertical __PRISMUI_COMPONENT_CLASS_PREFIX__Steps--ProgressDot __PRISMUI_COMPONENT_CLASS_PREFIX__Steps--vertical __PRISMUI_COMPONENT_CLASS_PREFIX__StepsControl className"
  >
    <li
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem is-process __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ProgressDot"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-container"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerTail"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerProgressDot"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerWrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-title __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-vertical-ProgressDot"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="First"
              >
                First
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-description __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
            >
              <span
                class=""
              />
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem is-wait __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ProgressDot"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-container"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerTail"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerProgressDot"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerWrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-title __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-vertical-ProgressDot"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="Second"
              >
                Second
              </span>
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-subTitle __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="this is subTitle"
              >
                this is subTitle
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-description __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
              title="this is description"
            >
              <span
                class=""
              >
                this is description
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem is-wait __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ProgressDot"
    >
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-container"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerTail"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerProgressDot"
        />
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-containerWrapper"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-body"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-title __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-vertical-ProgressDot"
            >
              <span
                class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
                title="Third"
              >
                Third
              </span>
            </div>
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-description __PRISMUI_COMPONENT_CLASS_PREFIX__StepsItem-ellText"
            >
              <span
                class=""
              />
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</div>
`;
